feat: add other documents